--- a/task-5-js-july-16-2023/task-2.html
+++ b/task-5-js-july-16-2023/task-2.html
@@ -43,9 +43,9 @@
 
             <form action="">
                 <label for="chackbox">programming language</label>
-                <input type="checkbox" id="html" value="HTML">HTML
-                <input type="checkbox" id="css" value="CSS">CSS
-                <input type="checkbox" id="js" value="JS">JS
+                <input type="checkbox" id="html" >HTML
+                <input type="checkbox" id="css" >CSS
+                <input type="checkbox" id="js" >JS
             </form>
             <hr>
 
