--- a/task-5-js-july-16-2023/task-3.html
+++ b/task-5-js-july-16-2023/task-3.html
@@ -33,22 +33,22 @@
 
 
         <label for="">center an email</label>
-        <input type="email" > <b id="message4"></b>
+        <input type="email" id="email"> <b id="message4"></b>
         <br>
 
 
         <label for="">confirm email</label>
-        <input type="conformemail"> <b id="message5"></b>
+        <input type="email" id="conformemail"> <b id="message5"></b>
         <br>
 
 
         <label for="">password</label>
-        <input type="password"> <b id="message6"></b>
+        <input type="password" id="password"> <b id="message6"></b>
         <br>
 
 
         <label for="">confirm password</label>
-        <input type="conformpassword"> <b id="message7"></b>
+        <input type="password" id="conformpassword"> <b id="message7"></b>
         <br>
     </form>
     
